Add Gtest and conveniency for writing UTs

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -1,2 +1,6 @@
 include(GMP)
 find_package(Eigen3 CONFIG REQUIRED GLOBAL)
+
+if (BUILD_TESTING)
+    find_package(GTest CONFIG REQUIRED GLOBAL)
+endif()
