--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -1,6 +1,9 @@
-find_package(GMP REQUIRED GLOBAL)
+set(Boost_NO_WARN_NEW_VERSIONS 1)
+find_package(Boost REQUIRED GLOBAL
+    COMPONENTS
+        program_options
+)
 find_package(Eigen3 CONFIG REQUIRED GLOBAL)
-
-if (BUILD_TESTING)
-    find_package(GTest CONFIG REQUIRED GLOBAL)
-endif()
+find_package(GMP REQUIRED GLOBAL)
+find_package(GSL REQUIRED GLOBAL)
+find_package(GTest CONFIG REQUIRED GLOBAL)
