--- a/src/fem/assembly/ut/CMakeLists.txt
+++ b/src/fem/assembly/ut/CMakeLists.txt
@@ -4,3 +4,8 @@ add_unit_test(fem_assembly_test
     LIBRARIES
         fem_assembly_lib
 )
+
+target_compile_definitions(fem_assembly_test
+    PRIVATE
+        SRC_DIR="${CMAKE_CURRENT_SOURCE_DIR}"
+)
