--- a/src/fem/assembly/ut/CMakeLists.txt
+++ b/src/fem/assembly/ut/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_unit_test(fem_assembly_test
     SOURCES
+        DiracLoadVectorTest.cpp
         StiffnessMatrixTest.cpp
     LIBRARIES
         fem_assembly_lib
