--- a/src/fem/basis/CMakeLists.txt
+++ b/src/fem/basis/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library(fem_basis_lib STATIC
     BasisFunctionIndexer.cpp
     ShapeFunctionFactory.cpp
     ShapeFunctionIndexer.cpp
-    TrialFunction.cpp
+    #TrialFunction.cpp
 )
 
 target_include_directories(fem_basis_lib
