Refactor ShapeFunctionFactory and add BasisFunctionFactory class for testing

--- a/src/fem/basis/ut/CMakeLists.txt
+++ b/src/fem/basis/ut/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_unit_test(fem_basis_test
     SOURCES
+        BasisFunctionFactoryTest.cpp
         BasisFunctionIndexerTest.cpp
         ShapeFunctionFactoryTest.cpp
         ShapeFunctionIndexerTest.cpp
