--- a/src/fem/basis/CMakeLists.txt
+++ b/src/fem/basis/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(fem_basis_lib STATIC
     BasisFunctionFactory.cpp
     BasisFunctionIndexer.cpp
+    ShapeFunctionEvaluator.cpp
     ShapeFunctionFactory.cpp
     ShapeFunctionIndexer.cpp
     #TrialFunction.cpp
